# music_backup_v5

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SPEC.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.workflow/frontend-safety-architecture-refactor/: final-report.md  orchestration.md  plan.md  state.json
scripts/: detect-version-bump.mjs  extract-release-notes.mjs  prepare-release-assets.mjs  security-check.mjs
src/: App.tsx  aiMarkdownExport.ts  backend.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  covers.rs  db.rs  external_discovery.rs  importer.rs  lib.rs  main.rs  models.rs  musicbrainz.rs  musicbrainz_sync.rs  wishlist.rs
src-tauri/src/db/: backups.rs  migrations.rs  settings.rs
src/app/: adaptiveDetails.test.tsx  adaptiveDetails.ts  chartProgressive.test.ts  chartProgressive.ts  chartTemplates.tsx  completionHeatmap.test.ts  completionHeatmap.ts  config.tsx  display.ts  genreGroups.ts  genreProgress.test.ts  genreProgress.ts  genreSuggestions.ts  genreTimeline.test.ts  genreTimeline.ts  input.ts  insightCohorts.test.ts  insightCohorts.ts  navigation.test.tsx  navigation.ts  requests.test.ts  requests.ts  searchProgressive.test.ts  searchProgressive.ts  themeBootstrap.ts  updateIndicator.test.ts  updateIndicator.ts  updater.ts  yearProgress.test.ts  yearProgress.ts
src/backend/: normalization.test.ts  normalization.ts  search.test.ts  tauriClient.ts  webPreview.ts
src/components/: AiMarkdownExportButton.test.tsx  AiMarkdownExportButton.tsx  AiSettingsPanel.tsx  AiSnapshotHistory.tsx  AiSnapshotReadablePreview.tsx  AlbumCover.test.tsx  AlbumCover.tsx  CurrentViewQuestionPanel.test.tsx  ExportResultStatus.tsx  (+23 more)
(+22 files in other folders)
