[package]
name = "music-library"
version = "0.30.0"
description = "Local-first MusicBee TSV library app"
authors = ["jtill"]
edition = "2021"

[lib]
name = "music_library_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
hex = "0.4"
id3 = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rust_xlsxwriter = "0.95.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.5.0", features = [] }
unicode-normalization = "0.1"
