[package]
name = "music-library"
version = "0.67.1"
description = "Local-first MusicBee TSV library app"
authors = ["jtill"]
edition = "2021"

[lib]
name = "music_library_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
dotenvy = "0.15"
hex = "0.4"
id3 = "1"
keyring = { version = "4.1.5", default-features = false, features = ["v1", "windows-native-keyring-store"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust_xlsxwriter = "0.95.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.5.0", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2.5.4"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-window-state = "2.4.1"
unicode-normalization = "0.1"
ureq = { version = "2.12", features = ["json"] }
